Now displays almost correctly on smaller screens

--- a/src/app/pages/tabs/components/apartments/apartments.component.scss
+++ b/src/app/pages/tabs/components/apartments/apartments.component.scss
@@ -1,4 +1,5 @@
-@import 'src/styles.scss';
+// @import 'src/styles.scss';
+@import 'src/styles/breakpoints.scss';
 
 .apartment {
   display: flex;
@@ -27,7 +28,8 @@
 button {
   margin: 10px 10px 10px 0;
   padding: 25px;
-  border: 2px solid $accent;
+  border: 2px solid green;
+  background-color: blue;
 }
 
 img {
@@ -35,20 +37,27 @@ img {
   margin-left: 20px;
 }
 
-// .apartment:nth-child(even) .description {
-//   order: 2;
-// }
+@media screen and (max-width:$screen-md-min) {
+  .apartment {
+    width: 70%;
+    flex-direction: column;
+    font-size: 16px;
+    // margin-top: 20px;
+    text-align: justify;
+    padding: 10px;
+  }
 
-// .apartment:nth-child(even) img {
-//   order: 1;
-//   margin-right: 20px;
-// }
+  h2 {
+    text-align: center;
+  }
 
-// .apartment:nth-child(odd) .description {
-//   order: 1;
-// }
+  .apartment:first-of-type {
+    margin-top: 10px;
+  }
 
-// .apartment:nth-child(odd) img {
-//   order: 2;
-//   margin-left: 20px;
-// }
+  img {
+    margin: 0;
+    width: 70vw;
+    height: auto;
+  }
+}
