--- a/src/app/pages/tabs/components/home/features-list/features-list.component.scss
+++ b/src/app/pages/tabs/components/home/features-list/features-list.component.scss
@@ -1,4 +1,5 @@
 @import 'src/styles';
+@import 'src/styles/breakpoints.scss';
 
 .feature {
   display: flex;
@@ -36,4 +37,35 @@ a {
   text-decoration: none;
   color: $accent;
   font-size: 22px;
+}
+
+@media screen and (max-width:$screen-md-min) {
+  .feature {
+    width: 70%;
+    flex-direction: column;
+    font-size: 16px;
+    margin-top: 20px;
+    text-align: justify;
+  }
+
+  h2 {
+    text-align: center;
+  }
+
+  .feature:nth-child(even) .description {
+    order: 1;
+  }
+
+  .feature:nth-child(even) img {
+    order: 2;
+    margin: 0;
+    width: 70vw;
+    height: auto;
+  }
+
+  .feature:nth-child(odd) img {
+    margin: 0;
+    width: 70vw;
+    height: auto;
+  }
 }
