--- a/src/app/pages/tabs/tabs.component.scss
+++ b/src/app/pages/tabs/tabs.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/breakpoints.scss';
+
 .header {
   position: relative;
 }
@@ -7,6 +9,7 @@
   grid-template-columns: repeat(7, 1fr);
   position: sticky;
   top: 0;
+  z-index: 100;
   padding-left: 15%;
   padding-right: 15%;
   margin: auto;
@@ -52,3 +55,36 @@ a {
   }
 }
 
+// @media screen and (min-width:$screen-md-min) and (max-width:$screen-lg-min) {
+//   .order__form {
+//     margin-top: 20px;
+//     text-align: center;
+//     display: grid;
+//     grid-template-columns: 1fr;
+//     row-gap: var(--gap);
+//   }
+
+//   .column__1, .column__2 {
+//     grid-column: 1;
+//   }
+
+//   .buttons__container {
+//     display: grid;
+//     grid-template-columns: 1fr;
+//   }
+
+//   .cancel, h3, .send__order {
+//     grid-column: 1;
+//     margin: 10px;
+//   }
+// }
+
+@media screen and (max-width:$screen-md-min) {
+  .nav__low {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-template-columns: none;
+    padding: 0;
+  }
+}
